// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renders a number input 1`] = `
@media  {
  .c-cHbqOs {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-cHbqOs:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-cHbqOs[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-cHbqOs::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }
}

@media  {
  .c-cHbqOs-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }
}

@media  {
  .c-cHbqOs-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }
}

<div>
  <input
    class="c-cHbqOs c-cHbqOs-fwoCmE-size-md c-cHbqOs-ikLAKdM-css"
    inputmode="numeric"
    pattern="[0-9]*"
    placeholder="001"
    type="text"
  />
</div>
`;

exports[`Input component renders a text input 1`] = `
@media  {
  .c-cHbqOs {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-cHbqOs:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-cHbqOs[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-cHbqOs::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }
}

@media  {
  .c-cHbqOs-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }
}

@media  {
  .c-cHbqOs-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }
}

<div>
  <input
    class="c-cHbqOs c-cHbqOs-fwoCmE-size-md c-cHbqOs-ikLAKdM-css"
    placeholder="INPUT"
    type="text"
  />
</div>
`;

exports[`Input component renders lg size 1`] = `
@media  {
  .c-cHbqOs {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-cHbqOs:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-cHbqOs[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-cHbqOs::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }
}

@media  {
  .c-cHbqOs-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-cHbqOs-jAZHIx-size-lg {
    height: var(--sizes-5);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }
}

@media  {
  .c-cHbqOs-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }
}

<div>
  <input
    class="c-cHbqOs c-cHbqOs-jAZHIx-size-lg"
    type="text"
  />
</div>
`;
